--- a/sunburst/index.html
+++ b/sunburst/index.html
@@ -73,6 +73,13 @@
     box-sizing: border-box;
     font-family: sans-serif;
     font-size: 0.7em;
+    border-bottom-width: 3px;
+}
+
+.buttongroup button:active, .perspective[active=true] button {
+    border-bottom-width: 1px;
+    position: relative;
+    top: 2px;
 }
 
 .buttongroup li {
